--- a/src/tests/bundles/overlays/local-charm-overlay.yaml.j2
+++ b/src/tests/bundles/overlays/local-charm-overlay.yaml.j2
@@ -5,9 +5,9 @@ applications:
       vip: '{{ OS_VIP00 }}'
       debug: True
   hacluster:
-    charm: cs:~openstack-charmers/hacluster
+    charm: ch:hacluster
     num_units: 0
-    channel: candidate
+    channel: 2.0.3/edge
   manila:
     options:
       debug: True
