Update the bundles to use the stable track, edge risk for yoga
The bundles for the yoga channel currently point to "latest/edge"
channel for all the charms.  This update points the charms to the
appropriate channel for the charm being used, either from ceph,
openstack, ovn or the misc tracks.

Remove impish bundle.

Change-Id: I4f2dc6035e84ca9f9a40d2b9119faf0176a38f4e

--- a/src/tests/bundles/overlays/local-charm-overlay.yaml.j2
+++ b/src/tests/bundles/overlays/local-charm-overlay.yaml.j2
@@ -7,7 +7,7 @@ applications:
   hacluster:
     charm: ch:hacluster
     num_units: 0
-    channel: latest/edge
+    channel: 2.4/edge
   manila:
     options:
       debug: True
